[package]
name = "git-quickcheckout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
git2 = "0.13"
crossterm = "0.22"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
